# TinyFish

./: README.md  agent.py  config.example.json  main.py  simple_tool.py
Tyni-fish/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
Tyni-fish/configs/: tyni_fish.json
Tyni-fish/docs/: ADDING_TOOLS.md  ARCHITECTURE.md  EVALS.md
Tyni-fish/evals/datasets/: smoke.jsonl
Tyni-fish/src/tyni_fish/: __init__.py  agent.py  cli.py  policy.py  tracing.py
Tyni-fish/src/tyni_fish/evals/: harness.py
Tyni-fish/src/tyni_fish/providers/: base.py  dummy.py  openai_compat.py
Tyni-fish/src/tyni_fish/tools/: base.py  builtins.py  registry.py
Tyni-fish/tests/: test_agent_smoke.py  test_policy_budget.py
